--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/express": "^4.17.2",
         "@types/node": "^12.12.14",
         "apollo-server-express": "^2.9.12",
+        "bcryptjs": "^2.4.3",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
