--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@okta/oidc-middleware": "^2.1.0",
-        "@types/express": "^4.17.2",
-        "@types/node": "^12.12.14",
-        "apollo-server-express": "^2.9.12",
+        "@okta/oidc-middleware": "^4.0.0",
+        "@types/express": "^4.17.3",
+        "@types/node": "^13.7.7",
+        "apollo-server-express": "^2.11.0",
         "bcryptjs": "^2.4.3",
+        "dotenv": "^8.2.0",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
-        "graphql": "^14.5.8",
+        "graphql": "^14.6.0",
         "graphql-depth-limit": "^1.1.0",
         "graphql-playground-middleware-express": "^1.7.12",
         "graphql-validation-complexity": "^0.2.5",
-        "typescript": "^3.7.2",
-        "uuid": "^3.3.3"
+        "typescript": "^3.8.3",
+        "uuid": "^7.0.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.1",
-        "ts-node": "^8.5.2",
-        "tslint": "^5.20.1",
+        "nodemon": "^2.0.2",
+        "ts-node": "^8.6.2",
+        "tslint": "^6.0.0",
         "tslint-microsoft-contrib": "^6.2.0"
     }
 }
