--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@okta/oidc-middleware": "^4.0.0",
-        "@types/express": "^4.17.3",
-        "@types/node": "^13.7.7",
         "apollo-server-express": "^2.11.0",
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
@@ -25,13 +22,21 @@
         "graphql-depth-limit": "^1.1.0",
         "graphql-playground-middleware-express": "^1.7.12",
         "graphql-validation-complexity": "^0.2.5",
-        "typescript": "^3.8.3",
+        "pg": "^7.18.2",
         "uuid": "^7.0.1"
     },
     "devDependencies": {
+        "@okta/oidc-middleware": "^4.0.0",
+        "@types/express": "^4.17.3",
+        "@types/express-session": "^1.17.0",
+        "@types/graphql-depth-limit": "^1.1.2",
+        "@types/node": "^13.7.7",
+        "@types/pg": "^7.14.1",
+        "@types/uuid": "^7.0.0",
         "nodemon": "^2.0.2",
         "ts-node": "^8.6.2",
         "tslint": "^6.0.0",
-        "tslint-microsoft-contrib": "^6.2.0"
+        "tslint-microsoft-contrib": "^6.2.0",
+        "typescript": "^3.8.3"
     }
 }
