--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "devDependencies": {
         "@okta/oidc-middleware": "^4.0.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.3",
         "@types/express-session": "^1.17.0",
         "@types/graphql-depth-limit": "^1.1.2",
