--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/graphql-depth-limit": "^1.1.2",
         "@types/node": "^13.7.7",
         "@types/pg": "^7.14.1",
+        "@types/ramda": "^0.26.43",
         "@types/uuid": "^7.0.0",
         "nodemon": "^2.0.2",
         "ts-node": "^8.6.2",
